2006-07-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/spheredesigner.c: don't cast between GimpRGB and
	GimpVector; it works but it's ugly and caused compiler warnings.

2006-07-07  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): changed
	"display" to "image window" in user visible string.

2006-07-07  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* app/gui/gui.c: relaxed required version for gtk+ to 2.8.17 and
	pango to 1.12.2 so that it compiles on Ubuntu (Dapper Drake).

2006-07-07  Sven Neumann  <sven@gimp.org>

	Use Ctrl-P as the default keyboard shortcut for Print (bug #302870):

	* app/actions/dialogs-actions.c: removed Ctrl-P shortcut from
	Palettes dialog.

	* etc/Makefile.am
	* etc/menurc: added a default menurc file that binds Ctrl-P to
	file-print-gtk.

	* app/core/gimp-user-install.c: install the default menurc.

2006-07-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcoloreditor.c
	* libgimpwidgets/gimpcolorselection.c: in the tooltip for the hex
	entry, mention that it also accepts CSS color names.

	* libgimpwidgets/gimpwidgets.c (gimp_scale_entry_new_internal):
	use an invisible event box for the tooltip.

2006-07-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: corrected comment (bug #346755).

2006-07-06  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-save.c (xcf_save_image_props): removed redundant
	call to xcf_save_prop() for PROP_PARASITES. Spotted by Henning
	Makholm (bug #346754).

2006-07-06  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_vector): applied a patch from
	Henning Makholm that introduces a sanity check on the number of
	axes (bug #346742).

2006-07-06  Sven Neumann  <sven@gimp.org>

	* app/base/boundary.[ch]
	* app/base/gimplut.c
	* app/base/pixel-processor.c
	* app/base/pixel-region.[ch]
	* app/base/temp-buf.[ch]
	* app/base/tile-manager.[ch]
	* app/base/tile.c: code cleanup.

2006-07-05  Sven Neumann  <sven@gimp.org>
