@@ -345,6 +345,17 @@ gimp_draw_tool_set_transform (GimpDrawTool *draw_tool,
   gimp_draw_tool_resume (draw_tool);
 }
 
+/**
+ * gimp_draw_tool_calc_distance:
+ * @draw_tool: a #GimpDrawTool
+ * @display:   a #GimpDisplay
+ * @x1:        start point X in image coordinates
+ * @y1:        start point Y in image coordinates
+ * @x1:        end point X in image coordinates
+ * @y1:        end point Y in image coordinates
+ *
+ * Returns: the distance between the given points in display coordinates
+ **/
 gdouble
 gimp_draw_tool_calc_distance (GimpDrawTool *draw_tool,
                               GimpDisplay  *display,
@@ -368,6 +379,21 @@ gimp_draw_tool_calc_distance (GimpDrawTool *draw_tool,
   return sqrt (SQR (tx2 - tx1) + SQR (ty2 - ty1));
 }
 
+/**
+ * gimp_draw_tool_in_radius:
+ * @draw_tool: a #GimpDrawTool
+ * @display:   a #GimpDisplay
+ * @x1:        start point X in image coordinates
+ * @y1:        start point Y in image coordinates
+ * @x1:        end point X in image coordinates
+ * @y1:        end point Y in image coordinates
+ * @radius:    distance in screen coordinates, not image coordinates
+ *
+ * The points are in image space coordinates.
+ *
+ * Returns: %TRUE if the points are within radius of each other,
+ *          %FALSE otherwise
+ **/
 gboolean
 gimp_draw_tool_in_radius (GimpDrawTool *draw_tool,
                           GimpDisplay  *display,
@@ -392,6 +418,19 @@ gimp_draw_tool_in_radius (GimpDrawTool *draw_tool,
   return (SQR (tx2 - tx1) + SQR (ty2 - ty1)) < SQR (radius);
 }
 
+/**
+ * gimp_draw_tool_draw_line:
+ * @draw_tool:   the #GimpDrawTool
+ * @x1:          start point X in image coordinates
+ * @y1:          start point Y in image coordinates
+ * @x1:          end point X in image coordinates
+ * @y1:          end point Y in image coordinates
+ * @use_offsets: whether to use the image pixel offsets of the tool's display
+ *
+ * This function takes image space coordinates and transforms them to
+ * screen window coordinates, then draws a line between the resulting
+ * coordindates.
+ **/
 void
 gimp_draw_tool_draw_line (GimpDrawTool *draw_tool,
                           gdouble       x1,
@@ -422,6 +461,19 @@ gimp_draw_tool_draw_line (GimpDrawTool *draw_tool,
                          tx2, ty2);
 }
 
+/**
+ * gimp_draw_tool_draw_dashed_line:
+ * @draw_tool:   the #GimpDrawTool
+ * @x1:          start point X in image coordinates
+ * @y1:          start point Y in image coordinates
+ * @x1:          end point X in image coordinates
+ * @y1:          end point Y in image coordinates
+ * @use_offsets: whether to use the image pixel offsets of the tool's display
+ *
+ * This function takes image space coordinates and transforms them to
+ * screen window coordinates, then draws a dashed line between the
+ * resulting coordindates.
+ **/
 void
 gimp_draw_tool_draw_dashed_line (GimpDrawTool *draw_tool,
                                  gdouble       x1,
@@ -453,6 +505,19 @@ gimp_draw_tool_draw_dashed_line (GimpDrawTool *draw_tool,
                          tx2, ty2);
 }
 
+/**
+ * gimp_draw_tool_draw_rectangle:
+ * @draw_tool:   the #GimpDrawTool
+ * @filled:      whether to fill the rectangle
+ * @x:           horizontal image coordinate
+ * @y:           vertical image coordinate
+ * @width:       width in image coordinates
+ * @height:      height in image coordinates
+ * @use_offsets: whether to use the image pixel offsets of the tool's display
+ *
+ * This function takes image space coordinates and transforms them to
+ * screen window coordinates, then draws the resulting rectangle.
+ **/
 void
 gimp_draw_tool_draw_rectangle (GimpDrawTool *draw_tool,
                                gboolean      filled,
@@ -1144,13 +1209,12 @@ gimp_draw_tool_draw_strokes (GimpDrawTool     *draw_tool,
 
 /**
  * gimp_draw_tool_draw_boundary:
- *
- * @draw_tool: a #GimpDrawTool
- * @bound_segs: the sorted brush outline
+ * @draw_tool:    a #GimpDrawTool
+ * @bound_segs:   the sorted brush outline
  * @n_bound_segs: the number of segments in @bound_segs
- * @offset_x: x offset
- * @offset_y: y offset
- * @use_offsets: whether to use offsets
+ * @offset_x:     x offset
+ * @offset_y:     y offset
+ * @use_offsets:  whether to use offsets
  *
  * Draw the boundary of the brush that @draw_tool uses. The boundary
  * should be sorted with sort_boundary(), and @n_bound_segs should
