@@ -12,6 +12,10 @@ arbitrary perspective transformations using a 3x3 matrix. Here you'll
 find a set of utility functions to set up those matrices and to perform 
 basic matrix manipulations and tests.
 </para>
+<para>
+Each matrix class has a 2 dimensional gdouble coeff member. The
+element for row r and column c of the matrix is coeff[r][c].
+</para>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
